welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:30: error: not found: value color
faireDiagG(color.RED);
           ^PatternPicture:31: error: not found: value color
faireDiagD(color.BLUE);
           ^